ops/kube/public-site-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sgar-public-site-svc
  labels:
    name: sgar-public-site-svc
spec:
  selector:
    name: sgar-public-site-svc
  type: ClusterIP
  ports:
    - name: public-prxy-prt
      port: 10443
      targetPort: 10443
