ops/kube/public-site-ingress-external.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-site-ingress-external
  labels:
    cert-manager.io/solver: route53
  annotations:
    cert-manager.io/enabled: "true"
    ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx-external"
    ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  tls:
  - hosts:
    - public-site.dev-external.egar-notprod.homeoffice.gov.uk
    secretName: public-site-tls-cmio
  rules:
  - host: public-site.dev-external.egar-notprod.homeoffice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service: 
            name: public-site-svc
            port:
              number: 10443
